--- a/groucho/static/groucho/sass/base/_generic.scss
+++ b/groucho/static/groucho/sass/base/_generic.scss
@@ -1,6 +1,63 @@
 .content {
+    display: flex;
     width: 800px;
     height: 400px;
     margin: 100px auto;
     background-color: #fff;
+    // border: 1px solid #aaa;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px #000;
+
+    .product {
+        background-color: #d1dffd;
+        width: 500px;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        text-align: center;
+        padding-top: 30px;
+
+        .title {
+            margin-top: 30px;
+            color: #666;
+            font-size: 30px;
+        }
+    }
+
+    .login {
+        padding: 20px;
+
+        .login-button {
+            width: 100%;
+        }
+    }
+}
+
+.button {
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    padding: 12px;
+    border: 0;
+    outline: none;
+    background-color: #F32C52;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    // box-shadow: 1px 1px 4px #333;
+    transition: background-color 200ms linear;
+
+    width: 200px;
+
+    &:hover {
+        
+        // box-shadow: 2px 2px 4px #333;
+        background-color: lighten(#f32c52, 10%);
+        // border-bottom: 1px solid #000;
+    }
+
+    &:active {
+        top: 2px;
+        box-shadow: none;
+    }
 }
