--- a/groucho/static/groucho/sass/base/_generic.scss
+++ b/groucho/static/groucho/sass/base/_generic.scss
@@ -4,12 +4,11 @@
     height: 400px;
     margin: 100px auto;
     background-color: #fff;
-    // border: 1px solid #aaa;
     border-radius: 4px;
     box-shadow: 0 2px 4px #000;
-
+    
     .product {
-        background-color: #d1dffd;
+        background-color: #306ffe;
         width: 500px;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
@@ -18,16 +17,49 @@
 
         .title {
             margin-top: 30px;
-            color: #666;
+            color: #fff;
             font-size: 30px;
         }
     }
 
     .login {
+        flex-grow: 1;
         padding: 20px;
 
-        .login-button {
-            width: 100%;
+        form {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .fields {
+                .errorlist {
+                    list-style: none;
+                    margin: 20px 0;
+                    padding: 10px;
+                    color: #fff;
+                    background-color: #ff0000;
+                    border-radius: 4px;
+
+                    &.nonfield {
+                        margin: 0 0 20px;
+                    }
+                }
+
+                .field {
+                    margin-bottom: 20px;
+                }
+
+                label {
+                    font-weight: bold;
+                    color: #777;
+                }
+            }
+            
+
+            .login-button {
+                width: 100%;
+            }
         }
     }
 }
