Adding login and admin styles plus cleanup
This finishes adding a styled default login page for applications to
extend.  The admin source summary page has been cleaned up by
moving a bunch of embedded javascript into its own file and pushing a
bunch of styles into an admin scss file.

--- a/groucho/static/groucho/sass/base/_base.scss
+++ b/groucho/static/groucho/sass/base/_base.scss
@@ -1,7 +1,7 @@
 html { 
     font-family: Arial, sans-serif;
     background: url(../img/background.jpg) no-repeat center center fixed;
-    @include background-size(cover);
+    background-size: cover;
 }
 
 input {
@@ -22,4 +22,9 @@ input {
     &::placeholder {
         color: $input-placeholder-color;
     }
+}
+
+label {
+    font-weight: bold;
+    color: $input-label-color;
 }
