--- a/groucho/static/groucho/sass/base/_generic.scss
+++ b/groucho/static/groucho/sass/base/_generic.scss
@@ -1,95 +1,33 @@
-.content {
-    display: flex;
-    width: 800px;
-    height: 400px;
-    margin: 100px auto;
-    background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px #000;
-    
-    .product {
-        background-color: #306ffe;
-        width: 500px;
-        border-top-left-radius: 4px;
-        border-bottom-left-radius: 4px;
-        text-align: center;
-        padding-top: 30px;
-
-        .title {
-            margin-top: 30px;
-            color: #fff;
-            font-size: 30px;
-        }
-    }
-
-    .login {
-        flex-grow: 1;
-        padding: 20px;
-
-        form {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
-            .fields {
-                .errorlist {
-                    list-style: none;
-                    margin: 20px 0;
-                    padding: 10px;
-                    color: #fff;
-                    background-color: #ff0000;
-                    border-radius: 4px;
-
-                    &.nonfield {
-                        margin: 0 0 20px;
-                    }
-                }
-
-                .field {
-                    margin-bottom: 20px;
-                }
-
-                label {
-                    font-weight: bold;
-                    color: #777;
-                }
-            }
-            
-
-            .login-button {
-                width: 100%;
-            }
-        }
-    }
-}
-
 .button {
     position: relative;
+    background-color: $button-default-background-color;
+    color: $white-color;
     cursor: pointer;
     user-select: none;
     padding: 12px;
     border: 0;
     outline: none;
-    background-color: #F32C52;
-    color: #fff;
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
-    // box-shadow: 1px 1px 4px #333;
     transition: background-color 200ms linear;
+    // box-shadow: 1px 1px 4px #333;
 
-    width: 200px;
+    &.primary {
+        background-color: $button-primary-background-color;
+        color: $white-color;
+
+        &:hover {
+            background-color: darken($button-primary-background-color, 10%);
+        }
+    }
 
     &:hover {
-        
-        // box-shadow: 2px 2px 4px #333;
-        background-color: lighten(#f32c52, 10%);
-        // border-bottom: 1px solid #000;
+        background-color: darken($button-default-background-color, 10%);
     }
 
     &:active {
         top: 2px;
-        box-shadow: none;
+        // box-shadow: none;
     }
 }
